app/assets/stylesheets/users.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

// Sign Up and Edit
.user-form {
    margin: auto;
    width: 50%;
    padding: 1em;
    background-color: rgba(0,209,178,0.1);
}

// Show
#user-show-header{
    width: 50%;
    margin-left: 2.5%;
}
#user-show-header-traid-level {
    width: 110%;
    transform: translate(-10%,0);
}
#user-show-header-traid-level > div {
    margin: 0 2%;
}
#user-show-container {
    width: 95%;
    height: 95%;
    margin: auto;
    background: rgba(0,209,178,0.1);
}
#user-show-info-container {
    // border: 1px solid rgb(230,207,139);
    margin: 2.5%;
    background-color: white;
}
#user-show-reviews-container {
//   border: 1px solid rgb(230,207,139);
   margin: 2.5%;
   background-color: white;
}
#user-show-map{
    margin: 2.5%;
    height: 100%;
    width: 100%;
    // border: 1px solid rgb(230,207,139);
}
#user-show-traid-form {
    display: none;
    position: relative;
}
#close-traid-form {
    position: absolute;
    top: 1em;
    right: 1em;
}
#close-traid-form-success{
    position: absolute;
    top: 1em;
    right: 0.5em;
}
#close-traid-form-success :hover {
    cursor: pointer;
}
#close-traid-form :hover{
    cursor: pointer;
}
.user-reviews{
    width: 96%;
    margin: 2% auto !important;
    background-color: rgba(255, 165, 0, 0.1);
    position: relative;
}
.review-offer {
    margin: auto;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0%);
}
#hidden-review-form{
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 5%;
    background-color: rgba(230,207,139,0.95);
}
#close-review-form {
    position: absolute;
    top: 1%;
    right: 1%;
}
#close-review-form :hover {
    cursor: pointer;
}
.toggle-review-form :hover {
    cursor: pointer;
}
.border {
    border: 1px solid rgba(230,207,139,0.95);
}

// Homepage
#user-homepage-container {
    width: 60%;
    margin: auto;
}
.user-homepage-traid-snippet {
    margin: 1em 0;
    padding: 1em;
    position: relative;
}
.user-homepage-traid-date > h6, .user-homepage-traid-date > p {
    display: inline-block;
}
.user-homepage-traid-link {
    position: absolute;
    top: 1em;
    right: 1em;
}
#user-homepage-notifications {
    background-color: rgba(0, 209, 178, 0.1);
    padding: 1em;
    min-height: 7%;
}
#user-homepage-active-traids {
    background-color: rgba(255, 165, 0, 0.1);
    margin: 1em 0;
    padding: 1em;
    position: relative;  
}
#user-homepage-community-news {
    border: 1px solid rgba(255, 165, 0, 0.5);
    padding: 1em;
}
#user-homepage-recommended-for-user {
    border: 1px solid rgba(0, 209, 178, 0.5);
    padding: 1em;
}
#user-homepage-finalized-traids {
    background-color: rgba(0, 209, 178, 0.1);
    margin: 1em 0;
    padding: 1em;
    position: relative;      
}

